# gnu_gneuralnetwork

./: .gitignore  Makefile.am  configure.ac
include/: Makefile.am
tests/: Makefile.am
