gneuralincludedir = $(includedir)/gneuralnetwork
gneuralinclude_HEADERS = activation.h\
	binom.h\
	defines.h\
	error.h\
	fact.h\
	feedforward.h\
	genetic_algorithm.h\
	gradient_descent.h\
	includes.h\
	load.h\
	msmco.h\
	network.h\
	parser.h\
	randomize.h\
	random_search.h\
	rnd.h\
	save.h\
	simulated_annealing.h
